--- a/ludumdare36.CSharp.csproj
+++ b/ludumdare36.CSharp.csproj
@@ -65,15 +65,19 @@
   <ItemGroup>
     <Compile Include="Assets\CodeExemple\EventListener.cs" />
     <Compile Include="Assets\CodeExemple\EventSender.cs" />
+    <Compile Include="Assets\Level\CameraController.cs" />
     <Compile Include="Assets\Level\Cell.cs" />
     <Compile Include="Assets\Level\Map.cs" />
     <Compile Include="Assets\Level\MapManager.cs" />
+    <Compile Include="Assets\Level\Room.cs" />
     <Compile Include="Assets\Level\SpriteAnim.cs" />
+    <Compile Include="Assets\Scripts\Damageable.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\Gun.cs" />
     <Compile Include="Assets\Scripts\InputReactive.cs" />
     <Compile Include="Assets\Scripts\Projectile.cs" />
     <Compile Include="Assets\Scripts\SimplePool.cs" />
+    <Compile Include="Assets\Scripts\TurretGun.cs" />
     <Compile Include="Assets\Scripts\Utils\Singleton.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
